# amalitech-streaming-lab

./: README.md  config.toml  docker-compose.yaml  main.py  postgres.sql  pyproject.toml  test_postgres.py
src/: config.py  generator.py  pipeline.py  spark_listeners.py  streaming.py  utils.py  write_to_postgres.py
src/config/: config.py  spark_session.py
src/documentation/: performance_metrics.md  postgres.sql  postgres_connection_details  project_overview.md  test_cases.md  user_guide.md
src/generator/: generator.py  io.py
src/streaming/: pipeline.py  schema.py  streaming.py  transformation.py  write_to_postgres.py
tests/: test_generator.py  test_io.py  test_postgres.py  test_streaming.py
